updated to logs32 and updated pagination